--- a/portfolio/css/freelancer.css
+++ b/portfolio/css/freelancer.css
@@ -14,12 +14,12 @@ p.small {
   font-size: 16px;
 }
 a,
-a:hover,
-a:focus,
-a:active,
-a.active {
-  color: #18BC9C;
-  outline: none;
+a.active,
+a:active {
+  color:#fff;outline:0
+}
+a:focus,a:hover{
+  color:#ff0081;outline:0
 }
 h1,
 h2,
@@ -54,22 +54,22 @@ hr.star-light {
   border-color: white;
 }
 hr.star-light:after {
-  background-color: #18BC9C;
+  background-color: #8259c8;
   color: white;
 }
 hr.star-primary {
-  border-color: #2C3E50;
+  border-color: #673ab7;
 }
 hr.star-primary:after {
   background-color: white;
-  color: #2C3E50;
+  color: #673ab7;
 }
 .img-centered {
   margin: 0 auto;
 }
 header {
   text-align: center;
-  background: #18BC9C;
+  background: #8259c8;
   color: white;
 }
 header .container {
@@ -113,7 +113,7 @@ header .intro-text .skills {
   outline: none;
 }
 .navbar-custom .navbar-brand {
-  color: white;
+  color: #673ab7;
 }
 .navbar-custom .navbar-brand:hover,
 .navbar-custom .navbar-brand:focus,
@@ -125,37 +125,37 @@ header .intro-text .skills {
   letter-spacing: 1px;
 }
 .navbar-custom .navbar-nav li a {
-  color: white;
+  color: #673ab7;
 }
 .navbar-custom .navbar-nav li a:hover {
-  color: #18BC9C;
+  color: #ff0081;
   outline: none;
 }
 .navbar-custom .navbar-nav li a:focus,
 .navbar-custom .navbar-nav li a:active {
-  color: white;
+  color: #673ab7;
 }
 .navbar-custom .navbar-nav li.active a {
   color: white;
-  background: #18BC9C;
+  background: #ff0081;
 }
 .navbar-custom .navbar-nav li.active a:hover,
 .navbar-custom .navbar-nav li.active a:focus,
 .navbar-custom .navbar-nav li.active a:active {
   color: white;
-  background: #18BC9C;
+  background: #ff0081;
 }
 .navbar-custom .navbar-toggle {
-  color: white;
+  color: #673ab7;
   text-transform: uppercase;
   font-size: 10px;
-  border-color: white;
+  border-color: #673ab7;
 }
 .navbar-custom .navbar-toggle:hover,
 .navbar-custom .navbar-toggle:focus {
-  background-color: #18BC9C;
+  background-color: #8259c8;
   color: white;
-  border-color: #18BC9C;
+  border-color: #673ab7;
 }
 @media (min-width: 768px) {
   .navbar-custom {
@@ -185,7 +185,7 @@ section h2 {
   font-size: 3em;
 }
 section.success {
-  background: #18BC9C;
+  background: #8259c8;
   color: white;
 }
 @media (max-width: 767px) {
@@ -207,7 +207,7 @@ section.success {
   margin: 0 auto;
 }
 #portfolio .portfolio-item .portfolio-link .caption {
-  background: rgba(24, 188, 156, 0.9);
+  background: #ff0081;
   position: absolute;
   width: 100%;
   height: 100%;
@@ -288,7 +288,7 @@ section.success {
   opacity: 1;
 }
 .floating-label-form-group-with-focus label {
-  color: #18BC9C;
+  color: #673ab7;
 }
 form .row:first-child .floating-label-form-group {
   border-top: 1px solid #eeeeee;
@@ -301,14 +301,14 @@ footer h3 {
 }
 footer .footer-above {
   padding-top: 50px;
-  background-color: #2C3E50;
+  background-color: #8259c8;
 }
 footer .footer-col {
   margin-bottom: 50px;
 }
 footer .footer-below {
   padding: 25px 0;
-  background-color: #233140;
+  background-color: #673ab7;
 }
 .btn-outline {
   color: white;
@@ -322,14 +322,14 @@ footer .footer-below {
 .btn-outline:focus,
 .btn-outline:active,
 .btn-outline.active {
-  color: #18BC9C;
+  color: #673ab7;
   background: white;
   border: solid 2px white;
 }
 .btn-primary {
   color: white;
-  background-color: #2C3E50;
-  border-color: #2C3E50;
+  background-color: #8259c8;
+  border-color: #673ab7;
   font-weight: 700;
 }
 .btn-primary:hover,
@@ -361,17 +361,17 @@ fieldset[disabled] .btn-primary:active,
 .btn-primary.disabled.active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #2C3E50;
-  border-color: #2C3E50;
+  background-color: #8259c8;
+  border-color: #673ab7;
 }
 .btn-primary .badge {
-  color: #2C3E50;
+  color: #673ab7;
   background-color: white;
 }
 .btn-success {
   color: white;
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #8259c8;
+  border-color: #673ab7;
   font-weight: 700;
 }
 .btn-success:hover,
@@ -380,8 +380,8 @@ fieldset[disabled] .btn-primary.active {
 .btn-success.active,
 .open .dropdown-toggle.btn-success {
   color: white;
-  background-color: #128f76;
-  border-color: #11866f;
+  background-color: #8259c8;
+  border-color: #673ab7;
 }
 .btn-success:active,
 .btn-success.active,
@@ -403,11 +403,11 @@ fieldset[disabled] .btn-success:active,
 .btn-success.disabled.active,
 .btn-success[disabled].active,
 fieldset[disabled] .btn-success.active {
-  background-color: #18BC9C;
-  border-color: #18BC9C;
+  background-color: #8259c8;
+  border-color: #673ab7;
 }
 .btn-success .badge {
-  color: #18BC9C;
+  color: #673ab7;
   background-color: white;
 }
 .btn-social {
@@ -479,7 +479,7 @@ fieldset[disabled] .btn-success.active {
   height: 75px;
   width: 1px;
   margin-left: 35px;
-  background-color: #2C3E50;
+  background-color: #8259c8;
   transform: rotate(45deg);
   -ms-transform: rotate(45deg);
   /* IE 9 */
@@ -490,7 +490,7 @@ fieldset[disabled] .btn-success.active {
 .portfolio-modal .close-modal .lr .rl {
   height: 75px;
   width: 1px;
-  background-color: #2C3E50;
+  background-color: #8259c8;
   transform: rotate(90deg);
   -ms-transform: rotate(90deg);
   /* IE 9 */
