--- a/portfolio/css/freelancer.css
+++ b/portfolio/css/freelancer.css
@@ -4,7 +4,7 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
 body {
-  font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', sans-serif;
   overflow-x: hidden;
 }
 p {
@@ -27,9 +27,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
-  font-weight: 700;
 }
 hr.star-light,
 hr.star-primary {
@@ -73,8 +71,8 @@ header {
   color: white;
 }
 header .container {
-  padding-top: 100px;
-  padding-bottom: 50px;
+  padding-top: 400px;
+  padding-bottom: 300px;
 }
 header img {
   display: block;
@@ -82,7 +80,6 @@ header img {
 }
 header .intro-text .name {
   display: block;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   font-size: 2em;
@@ -93,8 +90,8 @@ header .intro-text .skills {
 }
 @media (min-width: 768px) {
   header .container {
-    padding-top: 200px;
-    padding-bottom: 100px;
+    padding-top: 400px;
+    padding-bottom: 300px;
   }
   header .intro-text .name {
     font-size: 4.75em;
@@ -104,7 +101,6 @@ header .intro-text .skills {
   }
 }
 .navbar-custom {
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   text-transform: uppercase;
   font-weight: 700;
   border: none;
@@ -120,6 +116,7 @@ header .intro-text .skills {
 .navbar-custom .navbar-brand:active,
 .navbar-custom .navbar-brand.active {
   color: white;
+  color: #673ab7;
 }
 .navbar-custom .navbar-nav {
   letter-spacing: 1px;
