--- a/portfolio/css/portfolio.css
+++ b/portfolio/css/portfolio.css
@@ -1,7 +1,5 @@
 /*!
- * Start Bootstrap - Freelancer v3.3.7+1 (http://startbootstrap.com/template-overviews/freelancer)
- * Copyright 2013-2016 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
+ *
  */
 body {
   font-family: 'Roboto', sans-serif;
